// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ModeSwitcher should render basic mode switcher with string options 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher"
  >
    <div
      class="ant-col"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-text only-text"
        >
          key1
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-text only-text"
        >
          key2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-text only-text"
        >
          key3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ModeSwitcher should render mode switcher with object options and handle icon display 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher custom-class"
    style="margin-left: -8px; margin-right: -8px;"
  >
    <div
      class="ant-col ant-col-2"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label1
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon custom-class"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon custom-class"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon custom-class"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ModeSwitcher should work with defaultValue and controlled value 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher"
  >
    <div
      class="ant-col ant-col-2"
    >
      <div
        class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label1
        </span>
        <div
          class="active-icon-wrapper"
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2"
    >
      <div
        class="actiontech-mode-switcher-item css-klzra6"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
